# KernelManager

./: CMakeLists.txt  Main.qml  README.md  alt_Main.qml  kernelmanager.cpp  kernelmanager.h  main.cpp
ui/: Controls.qml  CurrentKernel.qml  InstalledKernels.qml  KernelList.qml
ui/deprecated/: AvailableKernels.qml  CurrentKernel.qml  InstalledKernels.qml
